
ChangeLog
 [ + added, - removed, * changed ]
 * 06Mar2012 First parallel event when thread > 1 was missing its HWC.
             XML parser was looking for sort-address instead of sort-addresses
             within <merge> block.
             Several exit cleanups.
 * 27Feb2012 Fixes in the instrumentation of worksharings for Intel/OpenMP
 * 24Feb2012 Extrae 2.2.1 is released!
 * 24Feb2012 Fixed a bug in the name of the nodes in the row file
 * 24Feb2012 Fixes in the instrumentation of GNU/OpenMP
 * 01Feb2012 Added CUDA instrumentation through CUPTI
 + 27Jan2012 Support for BG/Q machines
 * 23Jan2012 Fix when handling MPI_ANY_TAG in MPI calls (also for mpimpi2prv)
 * 19Jan2012 Improved support for Intel OpenMP rte. Some files autogenerated.
 + 03Jan2012 Support to instrument Intel OpenMP rte v11/v12 through LD_PRELOAD.
 * 01Dec2011 Improved support for DynInst (C&Fortran bugs in MT)
 * 01Dec2011 Improved support for instrumenting NANOS+MPI
 * 30Nov2011 Increased verbosity of papi_best_set
 * 28Nov2011 Fixed a bug that appeared when creating communicators
 * 14Nov2011 Added support to MAC OS X and improved support to FreeBSD
 * 07Nov2011 Extrae 2.2.0 is released!
 * 07Nov2011 Made --with-unwind, --with-papi, --with-mpi, --with-dyninst mandatory.
             Can be avoided through the respective --without.
 * 07Nov2011 Autodetect whether --enable-posix-clock is needed.
 * 25Oct2011 Adding thread names, starting by CUDA
 + 19Oct2011 Support for MPI+OpenMP applications using Dyninst launcher
 * 17Oct2011 Translation of @ of CUDA kernels into kernel names
 * 14Oct2011 Updating PACX instrumentation
 * 13Oct2011 Several OpenMP bugfixes. Added instrumentation for set/get num
             threads. Fixed hwc counts at openmp when counter set changes.
             Fixed timing routines when using multiple threads.
 * 08Sep2011 Several OpenMP bugfixes
 * 26Aug2011 Modified code to support virtual_thread (from nanos) to view
             nanos tasks as threads in paraver.