@@ -5,6 +5,9 @@ ChangeLog
              XML parser was looking for sort-address instead of sort-addresses
              within <merge> block.
              Several exit cleanups.
+             Documentation is no longer generated at make, but distributed
+               in its PS/PDF/HTML forms. This allows having the user-guide
+               without needing latex/dvi2ps/dvipdf/latex2html
  * 27Feb2012 Fixes in the instrumentation of worksharings for Intel/OpenMP
  * 24Feb2012 Extrae 2.2.1 is released!
  * 24Feb2012 Fixed a bug in the name of the nodes in the row file
